--- a/index.html
+++ b/index.html
@@ -5,5 +5,10 @@
     <body>
         <h1>Test H1</h1>
         <body>Test body.</body>
+        <ul>
+            <li>Elemento 1</li>
+            <li>Elemento 2</li>
+            <li>Elemento 3</li>
+        </ul>
     </body>
 </html>
